--- a/index.css
+++ b/index.css
@@ -33,9 +33,9 @@ body {
 .form {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: right;
   flex-direction: column;
-  padding: 0.3em;
+  padding: 0.7em;
 }
 
 .form label,
@@ -48,7 +48,7 @@ body {
   font-size: inherit;
   font-family: inherit;
   width: 100%;
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .form button {
